# playwright_local_agent_poc

./: .gitignore  concepts.md  makefile  pyproject.toml
scratchpad/: nodebased_chunking.py  output.format.md  snapshot_parser.py  transform_with_context.py
src/agents/workers/: execution_planner.py
src/libs/snapshot_manager/: nodebased_chunking.py  snapshot_parser.py  transform_with_context.py
src/libs/utils/: configs.py
src/tools-spec/cannonical/: playwright-tools.json
