[project]
name = "web-automation-agent"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "langgraph",
  "langchain",
  "langchain-ollama", 
  "langchain-community",
  "pydantic>=2",
  "httpx",
  "tenacity",
  "rich",
  "langchain-mcp-adapters",
]

[tool.uv]
# optional, but nice
[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",

]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true
show-fixes = true

exclude = [
  ".venv",
  "node_modules",
  "__pycache__",
  ".git",
  ".mypy_cache",
]

[tool.ruff.lint]
select = [
  # Core Flake8
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes

  # Strongly recommended
  "B",    # flake8-bugbear
  "I",    # isort
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "C4",   # flake8-comprehensions
  "RET",  # flake8-return
]

ignore = [
  "E501",  # line-length handled separately
]

[tool.ruff.lint.isort]
known-first-party = ["agent", "core"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true

warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
warn_redundant_casts = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

no_implicit_optional = true
strict_equality = true

pretty = true
show_error_codes = true
show_column_numbers = true

# Async / agent friendliness
allow_redefinition = false

# Ignore noisy third-party libs
[[tool.mypy.overrides]]
module = [
  "langchain.*",
  "langgraph.*",
  "chromadb.*",
  "faiss.*",
  "mcp.*",
]
ignore_missing_imports = true
